tests/baselines/reference/typeFromPropertyAssignment19(strict=true).errors.txt
semver.js(3,7): error TS7006: Parameter 'n' implicitly has an 'any' type.


==== index.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    const C = require("./semver")
    var two = C.f(1)
    
==== types.d.ts (0 errors) ====
    declare var require: any;
    declare var module: any;
==== semver.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    exports = module.exports = C
    C.f = n => n + 1
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    function C() {
        this.p = 1
    }